--- a/app_barrial_automatas/pubspec.yaml
+++ b/app_barrial_automatas/pubspec.yaml
@@ -18,7 +18,7 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
+  sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
   flutter:
@@ -29,6 +29,9 @@ dependencies:
   provider: ^5.0.0  
   
   cupertino_icons: ^1.0.2
+  sound_stream: ^0.2.0
+  dialogflow_grpc: ^0.2.9
+  rxdart: ^0.24.1
 
 dev_dependencies:
   flutter_test:
@@ -48,6 +51,7 @@ flutter:
   assets:
     - assets/images/
     - assets/logos/
+    - assets/credentials.json
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
